[package]
name = "brainrust"
version = "0.1.0"
authors = ["Luan Nguyen <luandknguyen@gmail.com>"]
license = "MIT"
repository = "https://github.com/luandknguyen/brainrust"
homepage = "https://github.com/luandknguyen/brainrust"
description = "An interpreter written in Rust. It focuses on features over speed."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "brainrust"
path = "src/lib.rs"

[[bin]]
name = "brainrust"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
